[package]
name = "rust_day1"
version = "0.1.0"
authors = ["Stefan Kerkewitz <stefan.kerkewitz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
lazy_static = "1.4.0"
regex = "1.4.2"
rayon = "1.5.0"
